--- a/index.html
+++ b/index.html
@@ -3,47 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Pages Test</title>
+    <title>Welcome to Test-Page!</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+            font-family: 'Comic Sans MS', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            background: linear-gradient(135deg, #f093fb, #f5576c);
+            color: white;
+            text-align: center;
         }
         header {
-            background: #007acc;
-            color: white;
-            padding: 20px 0;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.5);
         }
         header h1 {
             margin: 0;
+            font-size: 3rem;
+            animation: bounce 1.5s infinite;
+        }
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
         }
         main {
             padding: 20px;
         }
-        a {
-            color: #007acc;
-            text-decoration: none;
+        main p {
+            font-size: 1.5rem;
+            margin: 20px 0;
         }
-        a:hover {
-            text-decoration: underline;
+        .button {
+            background: #ff6f61;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        .button:hover {
+            background: #d23e38;
+        }
+        footer {
+            margin-top: 50px;
+            padding: 10px;
+            background: rgba(0, 0, 0, 0.5);
+        }
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Pages</h1>
+        <h1>Welcome to My Crazy Test-Page!</h1>
     </header>
     <main>
-        <p>This is a simple test page for my GitHub Pages site.</p>
-        <p>You can edit the <code>index.html</code> file to customize this page.</p>
-        <p>Visit my <a href="https://github.com/your-username" target="_blank">GitHub profile</a>.</p>
+        <p>🚀 This is not just a boring page, it's a playground for fun!</p>
+        <p>Click the button below and explore something cool:</p>
+        <a href="https://github.com/pekora-tech" target="_blank" class="button">Visit My GitHub</a>
     </main>
     <footer>
-        <p>© 2025 Your Name. All rights reserved.</p>
+        <p>✨ Created with ❤️ and a lot of ☕ by <strong>Pekora-Tech</strong> ✨</p>
     </footer>
 </body>
 </html>
